plugins {
	id 'java'
	id 'jacoco'
	id 'pmd'
	id 'info.solidsoft.pitest' version '1.19.0'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'
def pluginMainClass = 'com.genericclient.GenericClientLauncher'
def denseMainClass = 'com.genericclient.GenericClientDenseLauncher'

configurations {
	standaloneRuntime
}

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
	standaloneRuntime group: 'net.runelite', name:'client', version: runeLiteVersion
	standaloneRuntime group: 'net.runelite', name:'jshell', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation 'junit:junit:4.13.2'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

group = 'com.genericclient'

sourceSets {
	routeAudit {
		compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
		runtimeClasspath += output + compileClasspath
	}
}

def routeAuditFile = layout.buildDirectory.file('route-audit/routes.tsv')
tasks.register('exportRoutes', Exec) {
	dependsOn 'sdkJar'
	workingDir providers.gradleProperty('scriptCatalog').getOrElse('../GenericClientScripts')
	commandLine System.getProperty('os.name').startsWith('Windows') ? 'gradlew.bat' : './gradlew',
		'exportRoutes', "-PgenericClientDir=${projectDir}",
		"-PscriptApiJar=${layout.buildDirectory.file('libs/GenericClient-script-api.jar').get().asFile.absolutePath}",
		"-ProuteOutput=${routeAuditFile.get().asFile.absolutePath}", '--console=plain'
}

tasks.register('routeAudit', JavaExec) {
	group = 'verification'
	description = 'Plan the Java catalog routes against bundled navigation data.'
	dependsOn 'classes', 'routeAuditClasses', 'exportRoutes'
	classpath = sourceSets.routeAudit.runtimeClasspath
	mainClass = 'com.genericclient.GenericClientRouteAudit'
	args routeAuditFile.get().asFile.absolutePath
}

tasks.register('scriptCatalogAudit', JavaExec) {
	group = 'verification'
	description = 'Load the packaged Java catalog with the client registry without starting scripts.'
	dependsOn 'testClasses'
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.genericclient.GenericClientScriptCatalogAudit'
	args file(providers.gradleProperty('scriptCatalog').getOrElse('../GenericClientScripts')).absolutePath
}

tasks.register('plannerBenchmark', JavaExec) {
	group = 'verification'
	description = 'Measure deterministic offline planner latency and allocation.'
	dependsOn 'classes', 'routeAuditClasses'
	classpath = sourceSets.routeAudit.runtimeClasspath
	mainClass = 'com.genericclient.GenericClientPlannerBenchmark'
	if (providers.gradleProperty('plannerRecording').isPresent()) {
		args providers.gradleProperty('plannerRecording').get()
	}
}

tasks.named('jar') {
	archiveFileName.set('GenericClient-thin.jar')
}

tasks.register('sdkJar', Jar) {
	dependsOn 'classes'
	from sourceSets.main.output
	include 'org/dreambot/api/**'
	include 'com/genericclient/script/**'
	archiveFileName.set('GenericClient-script-api.jar')
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
	options.compilerArgs.addAll(['-Xlint:deprecation', '-Xlint:unchecked'])
}

jacoco {
	toolVersion = '0.8.12'
}

pmd {
	consoleOutput = true
	toolVersion = '7.25.0'
	ruleSets = []
	ruleSetFiles = files('config/pmd/ruleset.xml')
}

pitest {
	// PIT's focus feature forces headless mode; native input tests require Canvas peers.
	features = ['-MACOS_FOCUS']
	targetClasses = providers.gradleProperty('pitestTargetClasses')
		.map { value -> value.split(',') as List }
		.getOrElse(['com.genericclient.*', 'org.dreambot.api.*'])
	targetTests = providers.gradleProperty('pitestTargetTests')
		.map { value -> value.split(',') as List }
		.getOrElse(['com.genericclient.*'])
	threads = 4
	outputFormats = ['HTML', 'XML']
	timestampedReports = false
	timeoutConstInMillis = 10_000
	timeoutFactor = 2.0
}

if (providers.gradleProperty('scriptCatalog').isPresent()) {
	def catalog = file(providers.gradleProperty('scriptCatalog').get())
	def catalogTests = tasks.register('compileCatalogTests', Exec) {
		dependsOn 'sdkJar'
		workingDir catalog
		commandLine System.getProperty('os.name').startsWith('Windows') ? 'gradlew.bat' : './gradlew',
			'testClasses', "-PgenericClientDir=${projectDir}",
			"-PscriptApiJar=${layout.buildDirectory.file('libs/GenericClient-script-api.jar').get().asFile.absolutePath}", '--console=plain'
		if (gradle.startParameter.offline) args '--offline'
	}
	tasks.named('pitest') {
		dependsOn catalogTests
		additionalClasspath.from(new File(catalog, 'build/classes/java/main'), new File(catalog, 'build/classes/java/test'),
			new File(catalog, 'build/resources/test'))
	}
}

tasks.named('test') {
	finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')
	reports {
		xml.required = true
		html.required = true
	}
}

tasks.register('jacocoCombinedReport', JacocoReport) {
	group = 'verification'
	description = 'Report client coverage from client tests and catalog tests using the same SDK build.'
	dependsOn 'test'
	sourceSets sourceSets.main
	def catalog = file(providers.gradleProperty('scriptCatalog').getOrElse('../GenericClientScripts'))
	def catalogData = new File(catalog, 'build/jacoco/test.exec')
	executionData layout.buildDirectory.file('jacoco/test.exec').get().asFile, catalogData
	doFirst {
		if (!catalogData.isFile()) throw new GradleException('Run the Java catalog tests before requesting combined coverage.')
	}
	reports {
		xml.required = true
		html.required = true
	}
}

tasks.withType(Pmd).configureEach {
	reports {
		xml.required = true
		html.required = true
	}
}

tasks.register('cpdMain') {
	group = LifecycleBasePlugin.VERIFICATION_GROUP
	description = 'Check production Java for duplicated blocks of at least 100 tokens; optionally include -PscriptCatalog.'
	doLast {
		ant.taskdef(name: 'cpdReport', classname: 'net.sourceforge.pmd.ant.CPDTask',
			classpath: (configurations.pmd + configurations.testRuntimeClasspath).asPath)
		def report = layout.buildDirectory.file('reports/cpd/production.xml').get().asFile
		report.parentFile.mkdirs()
		ant.cpdReport(minimumTokenCount: 100, format: 'xml', outputFile: report,
			language: 'java', encoding: 'UTF-8', failOnError: true) {
			fileset(dir: 'src/main/java', includes: '**/*.java')
			if (providers.gradleProperty('scriptCatalog').isPresent()) {
				fileset(dir: providers.gradleProperty('scriptCatalog').get() + '/src/main/java', includes: '**/*.java')
			}
		}
		def duplicateGroups = javax.xml.parsers.DocumentBuilderFactory.newInstance()
			.newDocumentBuilder().parse(report).getElementsByTagName('duplication').length
		if (duplicateGroups > 0) throw new GradleException("CPD found ${duplicateGroups} duplicated production blocks: ${report}")
	}
}

tasks.register('qualityReport') {
	group = LifecycleBasePlugin.VERIFICATION_GROUP
	description = 'Runs tests, coverage reporting, and static analysis.'
	dependsOn tasks.named('test'), tasks.named('jacocoTestReport'),
		tasks.named('pmdMain'), tasks.named('pmdTest'), tasks.named('cpdMain')
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.main.runtimeClasspath + configurations.standaloneRuntime
	mainClass = pluginMainClass

	jvmArgs "-ea"
	args "--debug"
}

tasks.register('denseRun', JavaExec) {
	group = LifecycleBasePlugin.APPLICATION_GROUP
	description = 'Runs the Linux dense GenericClient proof of concept.'
	classpath = sourceSets.main.runtimeClasspath + configurations.standaloneRuntime
	mainClass = denseMainClass
	jvmArgs '-ea', '-Dgenericclient.dense=true', '-Dgenericclient.controlPort=0'
}

tasks.register('shadowJar', Jar) {
	dependsOn configurations.runtimeClasspath, configurations.standaloneRuntime
	manifest {
		attributes('Main-Class': pluginMainClass, 'Multi-Release': true)
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from sourceSets.main.output
	from {
		(configurations.runtimeClasspath + configurations.standaloneRuntime).collect { file ->
			file.isDirectory() ? file : zipTree(file)
		}
	}

	exclude 'META-INF/INDEX.LIST'
	exclude 'META-INF/*.SF'
	exclude 'META-INF/*.DSA'
	exclude 'META-INF/*.RSA'
	exclude '**/module-info.class'

	group = BasePlugin.BUILD_GROUP
	archiveClassifier.set('shadow')
	archiveFileName.set('GenericClient.jar')
}
